added user products

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,65 +1,59 @@
-.container{
-    max-width: 960px;
-    margin: 0 auto;
+.container {
+  max-width: 960px;
+  margin: 0 auto;
 }
 
 nav {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
+  display: flex;
+  justify-content: center;
+  gap: 20px;
 }
 
 li {
-    background-color: aliceblue;
-    list-style: none;
-    border-radius: 8px;
-    cursor: pointer;
-    transition: all .3s ease-in-out;
+  background-color: aliceblue;
+  list-style: none;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
 }
 
 a {
-    padding: 20px;
-    display: block;
-    text-decoration: none;
-    color: blueviolet;
-    font-weight: 500;
-
+  padding: 20px;
+  display: block;
+  text-decoration: none;
+  color: blueviolet;
+  font-weight: 500;
 }
 
-
-.active{
-    color: black;
-
+.active {
+  color: black;
 }
 
-
-.products-list{
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    gap: 20px;
-
+.products-list {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 20px;
 }
 
-.products-list__item{
-    width: 20%;
-    background-color: aqua;
-    padding: 20px;
-    cursor: pointer;
-
+.products-list__item {
+  width: 20%;
+  background-color: aqua;
+  padding: 20px;
+  cursor: pointer;
 }
 
-.products-item{
-    margin: 40px 0;
-    background-color: brown;
-    padding: 20px;
+.products-item {
+  margin: 40px 0;
+  background-color: brown;
+  padding: 20px;
 }
 
-.btn{
-    display: inline-block;
-    text-transform: uppercase;
-    font-size: 20px;
-    padding: 10px;
-    background-color: aliceblue;
-    border-radius: 8px;
+.btn {
+  display: inline-block;
+  text-transform: uppercase;
+  font-size: 20px;
+  padding: 10px;
+  background-color: aliceblue;
+  border-radius: 8px;
 }
